[package]
name = "zmq-sys"
version = "0.12.1"
authors = [
    "a.rottmann@gmx.at",
    "erick.tryzelaar@gmail.com",
]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the zeromq library"
keywords = ["ffi", "bindings"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/erickt/rust-zmq"
build = "build/main.rs"
links = "zmq"

[features]
libsodium = ["libsodium-sys-stable"]

[dependencies]
libsodium-sys-stable = { version = "1.0", optional = true }
libc = "0.2.25"

[build-dependencies]
zeromq-src = "0.3.6"

[package.metadata.system-deps]
libzmq = "4.3.5"
